# callmentorai-backend

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/api/: analysis.py  analytics_agent.py  auth.py  coach.py  dashboard.py  sessions.py
app/database/: connection.py
app/models/: __init__.py  report.py  session.py  user.py
app/pipelines/: analysis_pipeline.py
app/services/: auth.py  call_analyzer.py  embeddings.py  metadata_extractor.py  processing_queue.py  progress.py  report_generator.py  rubric_parser.py  transcription.py
